# routes/api.php
@@ -21,12 +21,16 @@ Route::resource('debt-groups', DebtGroupController::class);
  
 Route::prefix('debt-groups/{debtGroup}')->group(function () {
     Route::get('items/create', [DebtItemController::class, 'create'])->name('debt-items.create');
+    Route::post('items/bulk', [DebtItemController::class, 'bulkStore'])->name('debt-items.bulk-store');
+    Route::put('items/bulk', [DebtItemController::class, 'bulkUpdate'])->name('debt-items.bulk-update');
     Route::post('items', [DebtItemController::class, 'store'])->name('debt-items.store');
     Route::get('items/{debtItem}/edit', [DebtItemController::class, 'edit'])->name('debt-items.edit');
     Route::put('items/{debtItem}', [DebtItemController::class, 'update'])->name('debt-items.update');
     Route::delete('items/{debtItem}', [DebtItemController::class, 'destroy'])->name('debt-items.destroy');
  
     Route::get('payments/create', [DebtPaymentController::class, 'create'])->name('debt-payments.create');
+    Route::post('payments/bulk', [DebtPaymentController::class, 'bulkStore'])->name('debt-payments.bulk-store');
+    Route::put('payments/bulk', [DebtPaymentController::class, 'bulkUpdate'])->name('debt-payments.bulk-update');
     Route::post('payments', [DebtPaymentController::class, 'store'])->name('debt-payments.store');
     Route::get('payments/{debtPayment}/edit', [DebtPaymentController::class, 'edit'])->name('debt-payments.edit');
     Route::put('payments/{debtPayment}', [DebtPaymentController::class, 'update'])->name('debt-payments.update');
